<resources>
    <string name="app_name">Мои рецепты</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment358</string>
    <string name="nazvanie_froma1">Кулинарная книга </string>
    <string name="nazvanie_forma2">Добавить рецепт </string>
    <string name="nazvanie_froma3">Изменить рецепт </string>
    <string name="nazvanie_forma4">удалить рецепт </string>
    <string name="nazvanie_forma5">Мои рецепты </string>
    <string name="name_recept"><b>Название: </b></string>
    <string name="ingridient_recept"><b>Ингридиенты: </b> </string>
    <string name="formula_recept"><b>Рецепт: </b></string>
    <string name="Obrabotka_Pers_dannix"><![CDATA[Нажимая кнопку <<Зарегистрироваться>> Вы даете согласие на обработку персональных данных]]></string>
    <string name="title">title</string>
    <string name="description">description</string>

    <string-array name="complexity">
        <item>Не выбрано</item>
        <item>Новичок</item>
        <item>Студент</item>
        <item>Повар</item>
        <item>Шеф</item>
    </string-array>

    <string-array name="complexity_angl">
        <item>None</item>
        <item>Newbie</item>
        <item>Student</item>
        <item>Cook</item>
        <item>Chef</item>
    </string-array>

</resources>
